logs/Slang/generated/hdlconv/hdlconvertor_p185.sv.log
name: hdlconvertor_p185
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p185.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p185.sv:1:1: error: language feature not yet supported
class BasePacket;
^~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p185.sv:12:1: error: language feature not yet supported
class My_Packet extends BasePacket;
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p185.sv:24:2: error: use of undeclared identifier 'BasePacket'
	BasePacket P1 = new;
	^~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p185.sv:24:18: error: language feature not yet supported
	BasePacket P1 = new;
	                ^~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p185.sv:25:2: error: use of undeclared identifier 'My_Packet'
	My_Packet P2 = new;
	^~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p185.sv:25:17: error: language feature not yet supported
	My_Packet P2 = new;
	               ^~~
